tests/parser/tests/cases/should_fail/unknown_escape_sequence/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:8
1 |   k := '\j';
  |          ^ here
  = note: Invalid character escape sequence Unknown escape sequence 'j'
